--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.19",
     "sweetalert2": "^11.22.0",
+    "vue": "^3.5.17",
+    "vue-loader": "^17.4.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
