--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "crud-fetch",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Soundharr.github.io/E-commerceFroentend",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "format": "prettier --write .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -17,7 +21,6 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
-    "gh-pages": "^6.3.0",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
@@ -29,8 +32,6 @@
     "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.19",
     "sweetalert2": "^11.22.0",
-    "vue": "^3.5.17",
-    "vue-loader": "^17.4.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -42,6 +43,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "gh-pages": "^6.3.0",
+    "prettier": "^3.2.5"
   }
 }
