--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "homepage": "https://Soundharr.github.io/E-commerceFroentend",
+  "homepage": "https://Soundharr.github.io/E-commerceShoping",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -42,9 +42,9 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "vite": "^6.3.5",
     "gh-pages": "^6.3.0",
-    "prettier": "^3.2.5"
+    "globals": "^16.0.0",
+    "prettier": "^3.2.5",
+    "vite": "^6.3.5"
   }
 }
