--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.1.1",
     "@mui/material": "^7.1.2",
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "firebase": "^12.0.0",
     "json-server": "^1.0.0-beta.3",
+    "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
