--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.1.1",
     "@mui/material": "^7.1.2",
+    "@mui/x-charts": "^8.9.2",
     "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
@@ -34,6 +35,7 @@
     "react-loading-indicators": "^1.0.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "recharts": "^3.1.2",
     "styled-components": "^6.1.19",
     "sweetalert2": "^11.22.0",
     "yup": "^1.6.1"
