--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "bootstrap": "^5.3.7",
     "firebase": "^12.0.0",
     "json-server": "^1.0.0-beta.3",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
